--- a/React/프래그먼트.md
+++ b/React/프래그먼트.md
@@ -22,12 +22,15 @@
         - 만약 div 태그를 사용하고 싶지 않다면?! 프래그먼트를 사용하면 된다.
 
 ## 프래그먼트의 사용
-```js
-ReactDOM.render(
-    <Fragment>
-        <p> 안녕 </p>
-        <p> 리액트 </p>
-    </Fragment>,
-    document.getElementById('root')
-);
-```
+- 감싸는 태그가 불필요할 때 프래그먼트를 사용한다.
+    ```js
+    ReactDOM.render(
+        <Fragment>
+            <p> 안녕 </p>
+            <p> 리액트 </p>
+        </Fragment>,
+        document.getElementById('root')
+    );
+    ```
+    - 에러가 발생하지 않는다.
+    - 프래그먼트를 잘 활용하면 불필요한 div 태그를 사용하지 않아도 된다.
