--- a/소프트웨어 공학/1_소개.md
+++ b/소프트웨어 공학/1_소개.md
@@ -128,3 +128,86 @@
     - 소프트웨어 공학적 접근법으로 작업 방식을 표준화하면 작업의 효율이 높아짐.
 
 - 즉, 소프트웨어 공학은 `원리와 방법`을 적용하여 `품질 좋은 소프트웨어를` `최소의 비용으로` `계획된 일정에 맞추어 개발하는 것`이다.
+
+## 소프트웨어 공학의 주제
+1. 단계적 프로세스
+    - 소프트웨어에 대한 비전과 개념을 먼저 파악하고, 만족하는 소프트웨어로 구현할 때까지 정해진 순서의 작업을 수행함.
+    - 비즈니스 요구를 파악하고 타당성을 검토하며 시스템이 제공하여야 할 요구와 성능을 명세화함.
+    설계하고 구현하고 테스팅하여 목표 환경에 설치하는 단계적 절차를 밟음.
+2. 품질 보중
+    - 소프트웨어 품질 보증(Software Quality Assurance)은 개발 작업이 적절히 수행되었는지 확인하는 작업.
+    - 개발 작업에 의한 산출물이 요구와 일치하는지 품질 수준에 맞는지 검사함.
+3. 프로젝트 관리
+    - 개발과 품질 보증 작업을 관리하고 감독하는 일.
+    - 노력 예측, 프로젝트 계획, 일정, 리스크 관리, 행정 등.
+    - 소프트웨어 시스템이 정해진 일정과 예산 내에 인도될 수 있도록 확인함.
+
+### 단계적 프로세스
+- 소프트웨어 개발을 코딩에 치중하지 않고 요구 분석, 설계, 코딩, 테스팅 등 정해진 절차를 따라 작업하는 것.
+- 단계적 프로세스를 사용하여 개발하면 정해진 시점에 품질과 생산성을 효율적으로 점검할 수 있음.
+- `소프트웨어 위기`를 해결하기 위한 소프트웨어 공학의 핵심 접근법
+
+1. 요구 분석
+    - 소프트웨어 시스템이 해결해야 할 문제를 이해하기 위한 작업.
+    - 문제를 분석하여 사용자의 요구를 추출하고 이를 정리함.
+    - 시스템이 제공하여야할 기능과, 성능, 제약 사항 등을 파악하는 단계
+2. 설계
+    - 요구 명세에 기술된 문제의 솔루션을 기술하는 작업.
+    - 소프트웨어를 구성하는 요소와 구조, 인터페이스를 정의함.
+    - 모듈과 데이터, 유저 인터페이스도 설계함.
+3. 코딩
+    - 설계를 기초로 시공하는 작업.
+    - 소프트웨어를 구축하는 단계이므로 제품 품질에 크게 영향을 주지 않는다.
+4. 테스팅
+    - 개발된 소프트웨어에 결함이 있는지 검토, 확인하는 작업.
+    - 설계나 원시코드를 사용하여 결함을 찾을 수도 있지만, 주로 테스트 데이터를 준비하여 실행하는 방법을 사용함.
+
+- 프로세스 단계
+
+    |단계|초점|주요작업과 기술|결과물|
+    |--|--|--|--|
+    |분석|시스템을 위하여 무엇을 만들 것인가?|- 분석 전략 수집<br>- 요구 결정<br>- 유스케이스 분석<br>- 구조적 모델링<br>- 동적 모델링|요구분석 명세서|
+    |설계|시스템을 어떻게 구축할 것인가?|- 설계 전략 수립<br>- 아키텍쳐 설계<br>- 인터페이스 설계<br>- 프로그램 설계<br>- 데이터베이스, 파일 설계|설계 명세서|
+    |구현|시스템의 코딩과 단위 시험|- 프로그래밍<br>- 단위 테스팅<br>- 시스템 안정화 및 유지보수|새 시스템, 유지보수 계획|
+    |테스팅|시스템이 요구에 맞게 실행되나?|- 통합 데스팅<br>- 시스템 테스팅<br>- 인수 테스팅<br>- 시스템의 설치<br>- 프로젝트 관리 계획|테스팅 결과 보고서|
+
+### 품질 보증
+- 개발하고 있는 소프트웨어가 요구와 품질 수준을 만족시키는지 검토하고 확인, 테스팅하는 작업
+
+<br>
+
+- 검토(verification)
+    - 각 단계의 작업이 제시된 절차와 방법에 맞게 진행되었는지 체크하는 작업
+- 확인(validation)
+    - 개발 완료된 결과물이 품질 수준에 맞게 생산되었는지 검사하는 작업
+- 테스팅
+    - 구현된 소프트웨어를 실행하여 예상된 결과를 보이는지 확인하는 작업
+
+<br>
+
+- 바람직한 소프트웨어가 가져야 할 특징
+    - 유지보수성
+        - 변화하는 고객의 요구에 맞게 소프트웨어가 발전함.
+        - 소프트웨어 변경은 비즈니스 환경의 변화의 결과로 불가피하며 매우 중요한 특성.
+    - 신뢰성
+        - 보안과 안전을 포함한 다양한 성질
+        - 시스템이 장애를 일으켰을 때 물리적, 경제적 손실을 발생시키지 않는 특징
+    - 효율성
+        - 메모리, 프로세스 머신 사이클과 같은 시스템 자원을 낭비하지 않는 성질
+    - 유용성
+        - 사용자가 큰 노력을 들이지 않고 쉽게 사용할 수 있는 특성
+        - 적절한 사용자 인터페이스와 문서를 제공하여 만족시킬 수 있음.
+
+### 프로젝트 관리
+- 프로젝트 관리
+    - 범위를 결정하고 타당성을 검토하며 소프트웨어 개발이 어떤 방향으로 어떤 방법과 일정, 조직으로 이루어질 것인지 확인함.
+- 자원 관리
+    - 소프트웨어 제품을 개발하는 데 사용된 인력, 도구, 하드웨어는 해당 프로젝트의 자원으로 간주
+    - 자원은 한정적이기 때문에, 자원이 부족하면 프로젝트 진행에 방해를 받을 수 있음.
+    - 프로젝트에 대한 적절한 자원을 산정하고 할당하여 관리하여야 함.
+- 리스크 관리
+    - 프로젝트를 실패로 끝나게 할 수 있는 위험 요소를 예측하고 이를 식별, 분석하여 대비책을 세우는 등의 관리 활동
+    - 소프트웨어 개발의 위험 요소로는 개발자 이직, 요구 사항 변경, 요구 사항의 오해, 시간과 자원의 과소평가, 기술 변화, 환경 변화, 비즈니스 경쟁 등
+- 프로젝트 수행과 모니터링
+    - 작업의 상태를 파악하여 위험을 확인하고 위험을 해결하거나 조치를 취하는 것
+    - 진행 상태를 정기적으로 파악하여 보고서를 작성하고 중요 시점에 체크리스트를 만들어 점검함.
