--- a/정보처리기사/정보처리기사 필기/1-1-002-스크럼-기법.md
+++ b/정보처리기사/정보처리기사 필기/1-1-002-스크럼-기법.md
@@ -2,6 +2,17 @@
 
 ## 목차
 - [스크럼의 개요](#스크럼의-개요)
+    - [스크럼이란?](#스크럼이란)
+    - [제품 책임자(PO: Product Owner)](#제품-책임자po-product-owner)
+    - [스크럼 마스터(SM: Scrum Master)](#스크럼-마스터sm-scrum-master)
+    - [개발팀(DT: Development Team)](#개발팀dt-development-team)
+- [스크럼 개발 프로세스](#스크럼-개발-프로세스)
+    - [제품 백로그(Product Backlog)](#제품-백로그product-backlog)
+    - [스프린트 계획 회의(Sprint Planning Meeting)](#스프린트-계획-회의sprint-planning-meeting)
+    - [스프린트(Sprint)](#스프린트sprint)
+    - [일일 스크럼 회의(Daily Scrum Meeting)](#일일-스크럼-회의daily-scrum-meeting)
+    - [스프린트 검토 회의(Sprint Review)](#스프린트-검토-회의sprint-review)
+    - [스프린트 회고(Sprint Retrospective)](#스프린트-회고sprint-retrospective)
 
 ## 스크럼(Scrum)의 개요
 ### 스크럼이란?
